<resources>
    <string name="app_name">BandWagon</string>
    <string name="user_agent_suffix">BandWagon/2.0</string>

    <string name="pref_alarm_title">Alarm Clock</string>
    <string name="pref_alarm_enable">Alarm Set</string>
    <string name="pref_alarm_time">Time</string>
    <string name="pref_alarm_days">Days</string>
    <string name="pref_alarm_days_summary">Days</string>
    <string-array name="weekdays">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>
    <string-array name="weekdays_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string-array name="empty_array"></string-array>

    <string name="volume_title">Alarm Volume</string>
    <string name="volume_summary">Alarm Volume</string>
    <string name="fade_rate_title">Fade-in Rate</string>
    <string name="fade_rate_dialog">Time (in minutes) to reach max volume</string>
    <string name="fade_rate_summary">Time to reach max volume</string>


    <string name="settings">Settings</string>
    <string name="quit">Quit</string>

    <string name="set">Set</string>
    <string name="cancel">cancel</string>



</resources>
